<resources>
    <string name="app_name">E-Tender</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="login_save_name">Login</string>
    <string name="businessName">Business Name</string>
    <string name="phoneNo">Mobile No.</string>
    <string name="whatsappNo">WhatsApp No.</string>
    <string name="mailId">Email Id</string>
    <string name="next">Next</string>
    <string name="email">Email Id.</string>
    <string name="state">State</string>
    <string name="pin">PIn</string>
    <string name="identificationCategory">Identification Category</string>
    <string name="identificationNo">Identification No.</string>
    <string name="verify">Verify</string>
    <string name="welcome_to_our_e_trader_app">Welcome to our \n E-Tender App</string>
    <string name="items">Items</string>
    <string name="profile">Profile</string>
    <string name="doctors">Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sand">Sand/বালি</string>
    <string name="stoneChips">Stone Chips/স্টোন চিপস</string>
    <string name="steel">Steel/ইস্পাত</string>
    <string name="edit_business_details">Edit Buisness Details</string>
    <string name="need_help">Need Help</string>
    <string name="logOut">Log Out</string>
    <string name="orderDetails">Order Details</string>
    <string name="itemDetials">Item Details</string>
    <string name="itemQuantity">Item Quantity(Lorry)</string>
    <string name="date">Delivery Date</string>
    <string name="save">Save</string>
    <string name="itemEntry">Item Entry</string>
    <string name="textBoth">You will be able to accept payment via Cash on Delivery or UPI/Debit/Credit cards or netbanking.</string>
    <string name="cashOnDelivery">Cash On Delivery</string>
    <string name="textCashOnDelivery">Your store will recieve only Cash on Delivery orders.</string>
    <string name="onlinePayment">Online Payment</string>
    <string name="textOnlinePayment">Your store will only accept online payments via UPI/Debit/Credit cards or netbanking.</string>
    <string name="saveChanges">Save Changes</string>
    <string name="bothoption">Both Option</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="add">Add Product</string>
    <string name="go">Go</string>
    <string name="endCreateDate">End Date</string>
    <string name="startCreateDate">Start Date</string>
    <string name="AddCategoryImage">Add  Product Image</string>
    <string name="categoryName">Product Name</string>
    <string name="rate">Rate</string>
    <string name="addProduct">Add Product</string>
    <string name="history">History</string>
</resources>