<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/itemSecondFragment"
        android:title="@string/orderDetails"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/order"
        />
    <item android:id="@id/itemEntryFragment"
        android:title="@string/items"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/item"
        />
    <item android:id="@id/historyFragment"
        android:title="@string/history"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_baseline_history_24"
        />
    <item android:id="@id/profileSecondFragment"
        android:title="@string/profile"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/profile"
        />


</menu>