<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/gradienttheme"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_30ssp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_5ssp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/conference" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgLogin"
                android:layout_centerInParent="true"
                android:padding="@dimen/_2sdp"
                android:text="Registration"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_businessName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/businessName"
                android:layout_below="@id/tvLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_businessName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/white_cursor"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/phoneNo"
                android:layout_below="@id/text_businessName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="#000"
                    android:textCursorDrawable="@drawable/white_cursor"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_whatsappNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/whatsappNo"
                android:layout_below="@id/text_mobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="#000"
                    android:textCursorDrawable="@drawable/white_cursor"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:hint="@string/email"
                android:layout_below="@id/text_whatsappNo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColor="#000"
                    android:textCursorDrawable="@drawable/white_cursor"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnRegisterFirst"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_email"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_25ssp"
                android:layout_marginTop="@dimen/_25sdp"

                android:background="@drawable/square_gradient_share_background"
                android:layout_marginBottom="@dimen/_10ssp"
                android:text="@string/next"
                android:textAppearance="@style/buttonTextSize" />




        </RelativeLayout>


    </ScrollView>

</RelativeLayout>