<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradienttheme">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30ssp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_5ssp"
                android:src="@drawable/conference" />
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgLogin"
                android:layout_centerInParent="true"
                android:padding="@dimen/_2sdp"
                android:text="Registration"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_state"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLogin"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/state"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:endIconDrawable="@drawable/ic_down_arrow"
                app:endIconMode="custom"
                app:endIconTint="@color/white"
               >

                <AutoCompleteTextView
                    android:id="@+id/et_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionNext"
                    android:paddingStart="@dimen/_9ssp"
                    android:textAppearance="@style/textFormat"
                    android:textCursorDrawable="@drawable/white_cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_pin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_state"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/pin"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textColor="#000"

                    android:textCursorDrawable="@drawable/white_cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_identificationCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_pin"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/identificationCategory"

                app:endIconDrawable="@drawable/ic_down_arrow"
                app:endIconMode="custom"
                app:endIconTint="@color/white"
                app:errorTextColor="@color/red"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"

                >

                <AutoCompleteTextView
                    android:id="@+id/et_identificationCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionNext"
                    android:paddingStart="@dimen/_9ssp"
                    android:textAppearance="@style/textFormat"
                    android:textCursorDrawable="@drawable/white_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_identityNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_identificationCategory"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/identificationNo"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_identityNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:textColor="#000"

                    android:textCursorDrawable="@drawable/white_cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegisterSecond"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_identityNo"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25ssp"
                android:layout_marginBottom="@dimen/_10ssp"

                android:background="@drawable/square_gradient_share_background"
                android:text="@string/verify"
                android:textAppearance="@style/buttonTextSize" />


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>