<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/afterAnimationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradienttheme"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_5ssp"
            android:src="@drawable/conference" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogin"
            android:layout_centerInParent="true"
            android:padding="@dimen/_2sdp"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_mobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogin"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="12dp"

            android:hint="@string/userName"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:textColor="@color/white"
                android:maxLength="10"
                android:textCursorDrawable="@drawable/white_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_mobile"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="12dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:passwordToggleTint="@color/white"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/white_cursor" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_password"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/square_gradient_share_background"
            android:text="@string/login_save_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10ssp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:lineSpacingExtra="0sp"
            android:text="Not registered? Sign Up" />


    </RelativeLayout>

</RelativeLayout>